complate accounts(back and front) app

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -8,7 +8,7 @@
 <h2>login user</h2>
 <br>
 
-<form method="post" style="size:50%">
+<form method="post" style=" ">
     {%csrf_token%}
     {{ user.as_p }}
     <button type="submit">login</button>
