--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     {% block css%} {%endblock css%}
 </head>
 <body style="background:#f8f8f8 ; marginheight:10px " >
-{% include 'navbar.html' %}
+{% include 'navebar.html' %}
 {% include 'messages.html' %}
 {% block body %}
 
