--- a/templates/navebar.html
+++ b/templates/navebar.html
@@ -2,28 +2,36 @@
     <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'home:home'%}">Home</a>
-                </li>
+
                 {% if user.is_authenticated%}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'account:logout'%}">logout</a>
+                    <a class="nav-link" href="{% url 'accounts:accounts_home_login'%}">home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'account:profile'%}">profile</a>
+                    <a class="nav-link" href="{% url 'accounts:logout'%}">logout</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home:product'%}">product</a>
+                    <a class="nav-link" href="{% url 'accounts:profile'%}">profile</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'accounts:update'%}">update</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'accounts:change_password'%}">change password</a>
+                </li>
+
+
+
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'account:register'%}">register</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'accounts:accounts_home'%}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home:product'%}">product </a>
+                    <a class="nav-link" href="{% url 'accounts:register'%}">register</a>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'account:login'%}">login</a>
+                    <a class="nav-link" href="{% url 'accounts:login'%}">login</a>
                 </li>
                 {% endif %}
             </ul>
